force-app/main/default/objects/dsfs__CustomParameterMap__c/dsfs__CustomParameterMap__c.object-meta.xml
<CustomObject>
    <label>Custom Parameter Map</label>
    <nameField>
        <displayFormat>CPM{000000}</displayFormat>
        <label>Custom Parameter Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Parameter Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>