force-app/main/default/objects/dsfs__CustomParameterMap__c/fields/dsfs__Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Name__c</fullName>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>