force-app/main/default/objects/dsfs__CustomParameterMap__c/fields/dsfs__Value__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>